<!--
  ~ Copyright (c) 2017. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  ~ Morbi non lorem porttitor neque feugiat blandit. Ut vitae ipsum eget quam lacinia accumsan.
  ~ Etiam sed turpis ac ipsum condimentum fringilla. Maecenas magna.
  ~ Proin dapibus sapien vel ante. Aliquam erat volutpat. Pellentesque sagittis ligula eget metus.
  ~ Vestibulum commodo. Ut rhoncus gravida arcu.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.louisloh.mytmcproject.MainActivity">

    <item
        android:id="@+id/menu_Help"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@drawable/help"
        android:title="@string/Help_string"/>


    <item
        android:id="@+id/menu_Main"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/Home_string"/>
    <item
        android:id="@+id/menu_AboutUs"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/About_Us_string"/>
    <item
        android:id="@+id/menu_Course_string"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:title="@string/Course_string"/>
    <item
        android:id="@+id/menu_View_event"
        android:orderInCategory="5"
        app:showAsAction="never"
        android:title="@string/View_event_string"/>

    <item
        android:id="@+id/menu_ContactUs"
        android:orderInCategory="6"
        app:showAsAction="never"
        android:title="@string/Contact_Us_string"/>
    <item
        android:id="@+id/menu_Login"
        android:orderInCategory="7"
        app:showAsAction="never"
        android:title="@string/Login_string"/>

</menu>